@@ -13,13 +13,15 @@
  * either express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
-package org.seasar.framework.util;
+package org.seasar.util.convert;
 
 import junit.framework.TestCase;
 
+import org.seasar.util.convert.BooleanConversionUtil;
+
 /**
  * @author higa
- *
+ * 
  */
 public class BooleanConversionUtilTest extends TestCase {
 
@@ -27,16 +29,22 @@ public class BooleanConversionUtilTest extends TestCase {
      * @throws Exception
      */
     public void testToBoolean() throws Exception {
-        assertEquals("1", Boolean.TRUE, BooleanConversionUtil
-                .toBoolean(new Integer(1)));
-        assertEquals("2", Boolean.FALSE, BooleanConversionUtil
-                .toBoolean(new Integer(0)));
+        assertEquals(
+            "1",
+            Boolean.TRUE,
+            BooleanConversionUtil.toBoolean(Integer.valueOf(1)));
+        assertEquals(
+            "2",
+            Boolean.FALSE,
+            BooleanConversionUtil.toBoolean(Integer.valueOf(0)));
         assertEquals("3", Boolean.FALSE, BooleanConversionUtil.toBoolean("0"));
         assertEquals("4", Boolean.TRUE, BooleanConversionUtil.toBoolean("1"));
         assertEquals("5", Boolean.TRUE, BooleanConversionUtil.toBoolean("2"));
         assertEquals("6", Boolean.TRUE, BooleanConversionUtil.toBoolean("true"));
-        assertEquals("7", Boolean.FALSE, BooleanConversionUtil
-                .toBoolean("false"));
+        assertEquals(
+            "7",
+            Boolean.FALSE,
+            BooleanConversionUtil.toBoolean("false"));
         assertEquals("8", Boolean.TRUE, BooleanConversionUtil.toBoolean("fase")); // typo
     }
 }
